# llcom-plus

./: .gitignore  JavaScriptApi.md  README.md  README_EN.md  Version.props  llcom plus.sln  privacy-policy.md
.github/workflows/: build.yml
WapProj/: Package.appxmanifest  WapProj.wapproj
changlog/: autoUpdate.xml  index.html
llcom/: App.config  App.xaml  App.xaml.cs  FodyWeavers.xml  Program.cs  llcom.csproj  packages.config
llcom plus/: App.config  App.xaml  App.xaml.cs  Program.cs  llcom plus.csproj  packages.config
llcom plus/HttpTools/: HeaderParser.cs  HttpRequestService.cs
llcom plus/Model/: LinePlotPoint.cs  Settings.cs  ToSendData.cs  Uart.cs
llcom plus/OpenSSL/: README.txt
llcom plus/Pages/: AboutPage.xaml  AboutPage.xaml.cs  CircularSendPage.xaml  CircularSendPage.xaml.cs  Convert.cs  ConvertPage.xaml  ConvertPage.xaml.cs  DataCalcFileSendView.xaml  DataCalcFileSendView.xaml.cs  DataCalcPage.xaml.cs  DataShowPage.xaml  DataShowPage.xaml.cs  EncodingFixPage.xaml  EncodingFixPage.xaml.cs  LogReplayPage.xaml  LogReplayPage.xaml.cs  MqttTestPage.xaml  MqttTestPage.xaml.cs  MultiPortPage.xaml  MultiPortPage.xaml.cs  PlotPage.xaml.cs  SerialMonitorPage.xaml.cs  SocketClientPage.xaml  SocketClientPage.xaml.cs  TcpLocalPage.xaml  TcpLocalPage.xaml.cs  UdpLocalPage.xaml  UdpLocalPage.xaml.cs  (+4 more)
serial_monitor_rs/: Cargo.toml  README.md  build.ps1
serial_monitor_rs/serial_monitor/: Cargo.toml  build.rs
serial_monitor_rs/serial_monitor/src/: lib.rs
serial_monitor_rs/serial_monitor_hook/: Cargo.toml
serial_monitor_rs/serial_monitor_hook/src/: lib.rs
(+148 files in other folders)
